# validade_score

./: CMakeLists.txt  main.cpp
